[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/gfx/lights/white.png" type="Texture" id=1]
[ext_resource path="res://src/level/vertical_fill.gdshader" type="Shader" id=2]
[ext_resource path="res://assets/gfx/world/checkpoint_transparente.png" type="Texture" id=3]
[ext_resource path="res://src/level/Checkpoint.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/pct = 0.33

[sub_resource type="CapsuleShape2D" id=2]
radius = 64.0
height = 34.0

[node name="Checkpoint" type="Area2D"]
position = Vector2( 300, 300 )
collision_layer = 0
collision_mask = 8
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 20, -224 )

[node name="DepositSprite" type="Sprite" parent="."]
modulate = Color( 0.941176, 0.913725, 0.717647, 1 )
material = SubResource( 3 )
position = Vector2( -6.39998, 63.46 )
scale = Vector2( 0.32, 0.79 )
z_index = -1
texture = ExtResource( 1 )
offset = Vector2( 20, -224 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 54, -110 )
shape = SubResource( 2 )

[node name="AbsortionPoint" type="Position2D" parent="."]
position = Vector2( 46.5996, -111.3 )

[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
